# AndyOS

./: .clang-format  .gitignore  AndyOS.lnk  AndyOS.sln  Build.txt  Makefile  build.bat  model.3d
3DGame/: 3DGame.cpp  3DGame.h  3DGame.vcxproj  3DGame.vcxproj.filters  Box.cpp  Box.h  MyBox.cpp  MySphere.cpp  Thing.cpp
AndyOS/: AndyOS.vcxproj  AndyOS.vcxproj.filters  Button.cpp  Button.h  Canvas.cpp  Canvas.h  Control.cpp  Control.h  FileSystem.cpp  FileSystem.h  GUI.cpp  GUI.h  Label.cpp  Label.h  List.h  MAP.map  Makefile  Mandelbrot.cpp  Mandelbrot.h  Message.h  OS.cpp  OS.h  System.h  TextBox.cpp  TextBox.h  TextEdit.cpp  TextEdit.h  Window.cpp  Window.h  bmp.cpp  bmp.h  boot.cpp  definitions.h  dhcp.h  dns.cpp  dns.h  eth.h  http.cpp  http.h  icmp.cpp  (+21 more)
FileAdder/: FileAdder.cs  FileAdder.csproj
Files/: Aura3.mtl  model.3d
GL/: Color.cpp  Color.h  GL.cpp  GL.h  GL.vcxproj  GL.vcxproj.filters  Matrix.cpp  Matrix.h  Matrix3.cpp  Matrix4.cpp  Matrix4.h  Rasterize.cpp  Rasterize.h  Rasterizer.cpp  Rasterizer.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  (+2 more)
Programs/Libc/: Makefile.am  arpa.c  configure.in  crt0.c  netdb.h  poll.h  pthreads.c  syscalls.c
Programs/Libc/Include/: byteswap.h  endian.h  glob.h  netdb.h  poll.h
Programs/Libc/Include/machine/: _types.h
Programs/Libc/Include/netinet/: in.h
Programs/Libc/Include/sys/: dirent.h  ioctl.h  ioctls.h  resource.h  signal.h  socket.h  stat.h  sysmacros.h  termios.h  utmp.h  utsname.h  wait.h
Programs/Libc/arpa/: inet.h
Programs/Libc/sys/: _stat.h  dirent.h  ioctl.h  socket.h  termios.h  un.h
(+894 files in other folders)
